<resources>
    <string name="app_name">InstantFoodsReviewApp</string>
    <string name="email_login">이메일로 로그인</string>
    <string name="register">이메일 가입하기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="duplication">중복 확인</string>
    <string name="confirm">확인</string>
    <string name="login">로그인</string>
    <string name="autoLogin">자동 로그인</string>

    <string name="welcome">로그인하셨습니다.</string>
    <string name="logout">LOGOUT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ddokbokki">ddokbokki</string>


    <!-- setting password -->
    <string name="change_password">Change Password</string>
    <string name="current_password">현재 비밀번호 :</string>
    <string name="new_password">새 비밀번호 :</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="success_change_password">"비밀번호를 변경하셨습니다."</string>
    <string name="blank_password">"비밀번호를 입력하세요"</string>
    <string name="wrong_length_password">"비밀번호 길이가 안맞습니다."</string>
    <string name="duplicate_password">"새로운 비밀번호를 입력해 주세요"</string>
    <string name="new_nickname">변경할 닉네임</string>

    <!-- setting profile picture -->
    <string name="pick_picture_method">프로필 사진</string>
    <string name="take_photo">카메라로 사진 찍기</string>
    <string name="pick_gallery">앨범에서 사진 고르기</string>
    <string name="picture_cancel">취소</string>

    <string-array name="picture_method_array">
        <item>@string/pick_gallery</item>
        <item>@string/take_photo</item>
        <item>@string/picture_cancel</item>
    </string-array>

    <!-- setting error -->
    <string name="error_msg">Sorry! Couldn\'t fetch posts.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="menu_refresh">Refresh</string>


    <!-- write post -->
    <string name="good_point">장점</string>
    <string name="bad_point">단점</string>
    <string name="detail_post_title">포스트 제목</string>
    <string name="detail_post_hint">맛,포장, 가격 등</string>
    <string name="detail_post_bad">나빴던 점 (20자 이상)</string>
    <string name="detail_post_good">좋았던 점 (20자 이상)</string>
    <string name="add_picture">사진 추가하기 ( 최대 1장 )</string>
    <string name="home">Home</string>
    <string name="mypage">MyPage</string>
    <string name="instantfood_list">InstantFood List</string>
    <string name="stew">찌개류</string>
    <string name="noodle">냉면/면류</string>
    <string name="pizzaAndHotdog">피자/핫도그</string>
    <string name="friedRice">볶음밥/덮밥류</string>
    <string name="dumpling">만두/튀김류</string>
    <string name="navDdokbokki">떡볶이</string>
    <string name="stews">찌개류</string>
    <string name="setting">Setting</string>
    <string name="versionInfo">버전 정보 :</string>
    <string name="userOut">탈퇴하기</string>

</resources>
