<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_my_page"
            android:icon="@drawable/ic_my_page"
            android:title="@string/mypage" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/instantfood_list">
            <menu>
                <item
                    android:id="@+id/nav_stew"
                    android:title="@string/stew" />
                <item
                    android:id="@+id/nav_noodle"
                    android:title="@string/noodle" />
                <item
                    android:id="@+id/nav_ddokbokki"
                    android:title="@string/navDdokbokki" />
                <item
                    android:id="@+id/nav_dumpling"
                    android:title="@string/dumpling" />
                <item
                    android:id="@+id/nav_friedRice"
                    android:title="@string/friedRice" />
                <item
                    android:id="@+id/nav_pizza"
                    android:title="@string/pizzaAndHotdog" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>