<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_5dp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/constraintGuide_10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/constraintGuide_29dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/constraintGuide_29dp" />

        <View
            android:id="@+id/profile_view"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="@dimen/height_141dp"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_48dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="#AE8406"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/width_100dp"
            android:layout_height="@dimen/height_100dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/profile_background"
            app:layout_constraintBottom_toBottomOf="@+id/profile_view"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.074"
            app:srcCompat="@drawable/ic_my_page" />

        <TextView
            android:id="@+id/tv_setting_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_36dp"
            android:text="TextView"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_view"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tv_setting_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textColor="#EAE3E3"
            app:layout_constraintEnd_toEndOf="@+id/tv_setting_nickname"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/tv_setting_nickname"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting_nickname" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:fontFamily="sans-serif"
            android:text="@string/setting"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/profile_view" />

        <View
            android:id="@+id/view_setting_underline"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="@dimen/height_2dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="#AE8406"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting" />

        <ImageView
            android:id="@+id/image_version_info"
            android:layout_width="@dimen/width_35dp"
            android:layout_height="@dimen/height_35dp"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/view_setting_underline"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_version_info" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionInfo"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_version_info"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/image_version_info"
            app:layout_constraintTop_toTopOf="@+id/image_version_info" />

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="1.0"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.31"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/image_secession"
            android:layout_width="@dimen/width_35dp"
            android:layout_height="@dimen/height_35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/image_change_password"
            app:layout_constraintStart_toStartOf="@+id/image_change_password"
            app:layout_constraintTop_toBottomOf="@+id/image_change_password"
            app:layout_constraintVertical_bias="0.13"
            app:srcCompat="@drawable/ic_secession" />

        <TextView
            android:id="@+id/tv_secession"
            android:layout_width="@dimen/width_130dp"
            android:layout_height="@dimen/height_35dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/userOut"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/image_secession"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_change_password"
            app:layout_constraintTop_toTopOf="@+id/image_secession" />

        <ImageView
            android:id="@+id/image_change_password"
            android:layout_width="@dimen/width_35dp"
            android:layout_height="@dimen/height_35dp"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/image_version_info"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/image_version_info"
            app:layout_constraintTop_toBottomOf="@+id/image_version_info"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@drawable/ic_nickname_change" />

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="@dimen/width_130dp"
            android:layout_height="@dimen/height_35dp"
            android:background="#FFC107"
            android:gravity="center"
            android:text="비밀번호 변경하기   "
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/image_change_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/image_change_password" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/constraintGuide_60dp" />

        <ImageButton
            android:id="@+id/btn_change_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#AE8406"
            app:layout_constraintBottom_toBottomOf="@+id/tv_setting_nickname"
            app:layout_constraintEnd_toEndOf="@+id/profile_view"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toEndOf="@+id/tv_setting_nickname"
            app:layout_constraintTop_toTopOf="@+id/tv_setting_nickname"
            app:srcCompat="@drawable/ic_change_nickname" />

        <ImageButton
            android:id="@+id/btn_choose_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_background"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>